--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "pantry-pal-utils"
+name = "pantry-pal-ml"
 version = "0.1.0"
-description = "Utilities for PantryPal"
+description = "Machine Learning for PantryPal"
 requires-python = ">=3.12"
 dependencies = [
     "lightgbm>=4.6.0",
