--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Machine Learning for PantryPal"
 requires-python = ">=3.12"
 dependencies = [
+    "ipykernel",
     "lightgbm>=4.6.0",
     "matplotlib>=3.10.5",
     "pandas>=2.3.2",
@@ -21,6 +22,10 @@ etl = "recipe_recommender.etl.events.event_transformation:main"
 
 [tool.uv]
 package = true
+
+[tool.setuptools.packages.find]
+include = ["recipe_recommender*"]
+exclude = ["notebooks*"]
 
 # Ruff configuration for static analysis
 # IDE linter may show schema warnings - ignore them, Ruff config is valid
