--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pandas>=2.3.2",
     "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.1",
+    "scipy>=1.14.0",
     "seaborn>=0.13.2",
     "supabase>=2.18.1",
     "optuna>=3.6.1",
